--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercansoft Web Site</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -28,13 +29,197 @@
         <button class="btn">LOGIN</button>
 
     </header>
-    <section class="information">
-        <div class="information__left">
-           <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium asperiores, eius eveniet incidunt modi neque perferendis, possimus provident sit sunt suscipit. Adipisci consequatur excepturi hic impedit libero quisquam recusandae?</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequuntur culpa delectus deleniti doloribus fugit hic magni odio possimus provident quaerat ratione repudiandae saepe ut, veritatis! Amet at eum possimus?</p>
-            <button class="btn">Devam...</button>
+    <section class="sec-info">
+            <div class="sec-info__left">
+                <h1 class="t1">
+                    <span>A simple and smart </span>
+                    <span>tool that will help you to</span>
+                    <span>grow your businness</span>
+                </h1>
+                <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequuntur culpa delectus deleniti doloribus fugit hic magni odio possimus provident quaerat ratione repudiandae saepe ut, veritatis! Amet at eum possimus?</p>
+                <button class="btn btn--big">Devam</button>
+            </div>
+            <div class="sec-info__right">
+                <img src="imgs/img-right.png" alt="bg" class="sec-info__img">
+            </div>
+    </section>
+
+    <section class="sec-features">
+        <div class="sec-features__texts">
+            <h1 class="t2">Ne Yapıyoruz ?</h1>
+            <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate dignissimos incidunt molestias non omnis quisquam similique tempora ullam.</p>
         </div>
-        <div class="information__right"></div>
+
+        <div class="sec-features__content">
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#monitor"></use>
+                </svg>
+
+                <h2 class="t3"> Kurumsal Yazılım Sistemleri </h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore </p>
+            </div>
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#working-at-home"></use>
+                </svg>
+
+                <h2 class="t3">Website Tasarımı</h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore </p>
+            </div>
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#search"></use>
+                </svg>
+
+                <h2 class="t3">Seo Hizmetleri</h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore </p>
+            </div>
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#global"></use>
+                </svg>
+
+                <h2 class="t3">E-Ticaret Çözümleri</h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore</p>
+            </div>
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#smartphone"></use>
+                </svg>
+
+                <h2 class="t3">Mobil Uygulama Geliştirme</h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore </p>
+            </div>
+            <div class="sec-features__feature">
+
+                <svg class="sec-features__img">
+                    <use xlink:href="imgs/sprite.svg#server"></use>
+                </svg>
+
+                <h2 class="t3">Veri Tabanı Optimizasyonu</h2>
+                <p class="s1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="workflow">
+        <div class="workflow__top">
+            <h1 class="t2">Nasıl Yapıyoruz ?</h1>
+            <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate dignissimos incidunt molestias non omnis quisquam similique tempora ullam.</p>
+        </div>
+
+        <div class="workflow__content">
+          <div class="workflow__left">
+              <div class="workflow__box">
+                  <h2 class="workflow__heading u-text-align-right ">1- Toplantı Yapıyoruz</h2>
+                  <svg class="workflow__img u-float-right ">
+                      <use xlink:href="imgs/sprite.svg#content"></use>
+                  </svg>
+                  <p class="workflow__text u-text-align-right ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque</p>
+
+              </div>
+              <div class="workflow__box"></div>
+              <div class="workflow__box">
+                  <h2 class="workflow__heading u-text-align-right ">3- Tasarım Yapıyoruz</h2>
+                  <svg class="workflow__img u-float-right ">
+                      <use xlink:href="imgs/sprite.svg#content"></use>
+                  </svg>
+                  <p class="workflow__text u-text-align-right ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque</p>
+
+              </div>
+              <div class="workflow__box"></div>
+              <div class="workflow__box">
+                  <h2 class="workflow__heading u-text-align-right ">5- Teslim Ediyoruz</h2>
+                  <svg class="workflow__img u-float-right ">
+                      <use xlink:href="imgs/sprite.svg#completed-task"></use>
+                  </svg>
+                  <p class="workflow__text u-text-align-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque</p>
+
+              </div>
+
+          </div>
+          <div class="workflow__line-box">
+              <div class="workflow__line">
+                  <span class="workflow__circle"></span>
+                  <span class="workflow__circle"></span>
+                  <span class="workflow__circle"></span>
+                  <span class="workflow__circle"></span>
+                  <span class="workflow__circle"></span>
+              </div>
+
+          </div>
+          <div class="workflow__right">
+              <div class="workflow__box">
+
+              </div>
+              <div class="workflow__box">
+                  <h2 class="workflow__heading">2- Planlıyoruz</h2>
+                  <svg class="workflow__img">
+                      <use xlink:href="imgs/sprite.svg#planning"></use>
+                  </svg>
+                  <p class="workflow__text ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque </p>
+
+              </div>
+              <div class="workflow__box"></div>
+              <div class="workflow__box">
+                  <h2 class="workflow__heading">4- Kodluyor ve Test Ediyoruz</h2>
+                  <svg class="workflow__img">
+                      <use xlink:href="imgs/sprite.svg#programming"></use>
+                  </svg>
+                  <p class="workflow__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque </p>
+
+              </div>
+              <div class="workflow__box">
+
+
+              </div>
+          </div>
+        </div>
+
+    </section>
+    <section class="sec-counter">
+        <div class="sec-counter__top">
+            <h1 class="t2">Neler Yaptık ?</h1>
+            <p class="t4" >Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium blanditiis corporis cumque deleniti doloremque in ipsum iste, laborum magnam, minima nemo placeat quas qui similique sint sit, tempore vel?</p>
+        </div>
+
+        <div class="sec-counter__bottom">
+            <div class="counter">
+                <svg class="counter__svg">
+                    <use xlink:href="imgs/sprite.svg#user"></use>
+                </svg>
+                <span class="counter__num">155</span>
+                <p class="counter__p">Mutlu Müşteri</p>
+            </div>
+            <div class="counter">
+                <svg class="counter__svg">
+                    <use xlink:href="imgs/sprite.svg#checklist"></use>
+                </svg>
+                <span class="counter__num">125</span>
+                <p class="counter__p">Tamamlanan Proje</p>
+            </div>
+            <div class="counter">
+                <svg class="counter__svg">
+                    <use xlink:href="imgs/sprite.svg#customer-1"></use>
+                </svg>
+                <span class="counter__num">38</span>
+                <p class="counter__p">Referans</p>
+            </div>
+            <div class="counter">
+                <svg class="counter__svg">
+                    <use xlink:href="imgs/sprite.svg#customer"></use>
+                </svg>
+                <span class="counter__num">46</span>
+                <p class="counter__p">Aktif Müşteri</p>
+            </div>
+        </div>
+        <button class="btn btn--big">Detaylı bilgi için Tıkla</button>
     </section>
 
 
