--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="nav__item"><a href="" class="nav__link">contact us</a></li>
             </ul>
         </nav>
-        <button class="btn">LOGIN</button>
+        <button class="btn"><span>LOGIN</span><span>LOGIN</span></button>
 
     </header>
     <section class="sec-info">
@@ -37,19 +37,20 @@
                     <span>grow your businness</span>
                 </h1>
                 <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequuntur culpa delectus deleniti doloribus fugit hic magni odio possimus provident quaerat ratione repudiandae saepe ut, veritatis! Amet at eum possimus?</p>
-                <button class="btn btn--big">Devam</button>
+                <button class="btn btn--big">
+                    <span>devam</span>
+                    <span>devam</span>
+                </button>
             </div>
             <div class="sec-info__right">
                 <img src="imgs/img-right.png" alt="bg" class="sec-info__img">
             </div>
     </section>
-
     <section class="sec-features">
         <div class="sec-features__texts">
             <h1 class="t2">Ne Yapıyoruz ?</h1>
             <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum cupiditate dignissimos incidunt molestias non omnis quisquam similique tempora ullam.</p>
         </div>
-
         <div class="sec-features__content">
             <div class="sec-features__feature">
 
@@ -107,7 +108,6 @@
             </div>
         </div>
     </section>
-
     <section class="workflow">
         <div class="workflow__top">
             <h1 class="t2">Nasıl Yapıyoruz ?</h1>
@@ -119,14 +119,14 @@
               <div class="workflow__box">
                   <h2 class="workflow__heading u-text-align-right ">1- Toplantı Yapıyoruz</h2>
                   <svg class="workflow__img u-float-right ">
-                      <use xlink:href="imgs/sprite.svg#content"></use>
+                      <use xlink:href="imgs/sprite.svg#interview"></use>
                   </svg>
                   <p class="workflow__text u-text-align-right ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque</p>
 
               </div>
               <div class="workflow__box"></div>
               <div class="workflow__box">
-                  <h2 class="workflow__heading u-text-align-right ">3- Tasarım Yapıyoruz</h2>
+                  <h2 class="workflow__heading u-text-align-right ">3- Tasarlıyoruz</h2>
                   <svg class="workflow__img u-float-right ">
                       <use xlink:href="imgs/sprite.svg#content"></use>
                   </svg>
@@ -219,11 +219,92 @@
                 <p class="counter__p">Aktif Müşteri</p>
             </div>
         </div>
-        <button class="btn btn--big">Detaylı bilgi için Tıkla</button>
+        <button class="btn btn--big"><span>Detaylar</span><span>Detaylar </span></button>
     </section>
+    <section class="sec-cards">
+        <h1 class="t2 ">Hosting Paketlerimiz</h1>
+        <div class="sec-cards__cards">
+            <div class="card">
 
+                <div class="card__top card--pink">
+                    <svg class="card__img">
+                        <use xlink:href="imgs/sprite.svg#working-at-home"></use>
+                    </svg>
 
+                    <div class="card__texts">
+                        <span class="card__title">Ekonomik</span>
+                        <span class="card__price">1800<sup>TL</sup></span>
+                        <small class="card__text">aylık</small>
+                    </div>
+                </div>
+                <div class="card__bottom">
+                    <ul class="card__list">
+                        <li class="card__item"><span>SSD Disk</span><span>1GB</span></li>
+                        <li class="card__item"><span>Sub Domain</span><span>3 Adet</span></li>
+                        <li class="card__item"><span>Trafik</span><span>80GB</span></li>
+                        <li class="card__item"><span>CPU</span><span>1 Core</span></li>
+                    </ul>
+                    <button class="btn btn--big btn--pink"><span>Satın Al</span><span>Satın Al</span></button>
+                </div>
 
+            </div>
+            <div class="card">
+
+                <div class="card__top">
+                    <svg class="card__img">
+                        <use xlink:href="imgs/sprite.svg#global"></use>
+                    </svg>
+
+                    <div class="card__texts">
+                        <span class="card__title">Profesyonel</span>
+                        <span class="card__price">2700<sup>TL</sup></span>
+                        <small class="card__text">yıllık</small>
+                    </div>
+                </div>
+                <div class="card__bottom">
+                    <ul class="card__list">
+                        <li class="card__item"><span>SSD Disk</span><span>5GB</span></li>
+                        <li class="card__item"><span>Sub Domain</span><span>10 Adet</span></li>
+                        <li class="card__item"><span>Trafik</span><span>200GB</span></li>
+                        <li class="card__item"><span>CPU</span><span>2 Core</span></li>
+                    </ul>
+                    <button class="btn btn--big "><span>Satın Al</span><span>Satın Al</span></button>
+                </div>
+
+            </div>
+            <div class="card">
+
+                <div class="card__top card--purple">
+                    <svg class="card__img">
+                        <use xlink:href="imgs/sprite.svg#monitor"></use>
+                    </svg>
+
+                    <div class="card__texts">
+                        <span class="card__title">Premium</span>
+                        <span class="card__price">4500<sup>TL</sup></span>
+                        <small class="card__text">yıllık</small>
+                    </div>
+                </div>
+                <div class="card__bottom">
+                    <ul class="card__list">
+                        <li class="card__item"><span>SSD Disk</span><span>Sınırsız</span></li>
+                        <li class="card__item"><span>Sub Domain</span><span>Sınırsız</span></li>
+                        <li class="card__item"><span>Trafik</span><span>Sınırsız</span></li>
+                        <li class="card__item"><span>CPU</span><span>4 Core</span></li>
+                    </ul>
+                    <button class="btn btn--big btn--purple"><span>Satın Al</span><span>Satın Al</span></button>
+                </div>
+
+            </div>
+        </div>
+    </section>
+    <section class="sec-comment">
+        <div class="comment">
+            <img src="" alt="" class="comment__img">
+            <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate, eos facere maxime nesciunt nisi quis ratione. Accusamus dolore enim, eos explicabo illum ipsa nemo quaerat reiciendis repellendus saepe suscipit.</div>
+        </div>
+    </section>
+    <footer class="footer">footer</footer>
 </div>
 
 </body>
