--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <span>grow your businness</span>
                 </h1>
                 <p class="t4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequuntur culpa delectus deleniti doloribus fugit hic magni odio possimus provident quaerat ratione repudiandae saepe ut, veritatis! Amet at eum possimus?</p>
-                <button class="btn btn--big">
+                <button class="btn btn--middle">
                     <span>devam</span>
                     <span>devam</span>
                 </button>
@@ -219,7 +219,7 @@
                 <p class="counter__p">Aktif Müşteri</p>
             </div>
         </div>
-        <button class="btn btn--big"><span>Detaylar</span><span>Detaylar </span></button>
+        <button class="btn btn--middle"><span>Detaylar</span><span>Detaylar </span></button>
     </section>
     <section class="sec-cards">
         <h1 class="t2 ">Hosting Paketlerimiz</h1>
@@ -244,7 +244,7 @@
                         <li class="card__item"><span>Trafik</span><span>80GB</span></li>
                         <li class="card__item"><span>CPU</span><span>1 Core</span></li>
                     </ul>
-                    <button class="btn btn--big btn--pink"><span>Satın Al</span><span>Satın Al</span></button>
+                    <button class="btn btn--middle btn--pink"><span>Satın Al</span><span>Satın Al</span></button>
                 </div>
 
             </div>
@@ -268,7 +268,7 @@
                         <li class="card__item"><span>Trafik</span><span>200GB</span></li>
                         <li class="card__item"><span>CPU</span><span>2 Core</span></li>
                     </ul>
-                    <button class="btn btn--big "><span>Satın Al</span><span>Satın Al</span></button>
+                    <button class="btn btn--middle "><span>Satın Al</span><span>Satın Al</span></button>
                 </div>
 
             </div>
@@ -292,17 +292,77 @@
                         <li class="card__item"><span>Trafik</span><span>Sınırsız</span></li>
                         <li class="card__item"><span>CPU</span><span>4 Core</span></li>
                     </ul>
-                    <button class="btn btn--big btn--purple"><span>Satın Al</span><span>Satın Al</span></button>
+                    <button class="btn btn--middle btn--purple"><span>Satın Al</span><span>Satın Al</span></button>
                 </div>
 
             </div>
         </div>
     </section>
+    <section class="sec-idea">
+        <h1 class="sec-idea__text">Aklınızda bir fikir mi var ?</h1>
+        <button class="btn btn--big"><span>Bizimle Paylaş</span><span>Bizimle Paylaş</span></button>
+    </section>
     <section class="sec-comment">
-        <div class="comment">
-            <img src="" alt="" class="comment__img">
-            <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut cupiditate, eos facere maxime nesciunt nisi quis ratione. Accusamus dolore enim, eos explicabo illum ipsa nemo quaerat reiciendis repellendus saepe suscipit.</div>
+
+        <div class="sec-comment__top">
+            <h2 class="t2 t2--white">Müşterilerimizin Yorumları</h2>
+
         </div>
+
+        <div class="sec-comment__bottom">
+            <div class="comment">
+
+                <img src="imgs/person.jpg" alt="person" class="comment__img">
+                <div class="comment__content-shadow">
+                    <div class="comment__content">
+                        <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam blanditiis, debitis dolorum expedita, illum ipsum iste, maxime molestias necessitatibus nihil non officiis quidem quisquam reprehenderit saepe sed voluptate. Quam.</div>
+                        <span class="comment__name">-A. ARSLANTAŞ</span>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="comment">
+
+                <img src="imgs/person.jpg" alt="person" class="comment__img">
+                <div class="comment__content-shadow">
+                    <div class="comment__content">
+                        <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam blanditiis, debitis dolorum expedita, illum ipsum iste, maxime molestias necessitatibus nihil non officiis quidem quisquam reprehenderit saepe sed voluptate. Quam.</div>
+                        <span class="comment__name">-A. ARSLANTAŞ</span>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="comment">
+
+                <img src="imgs/person.jpg" alt="person" class="comment__img">
+                <div class="comment__content-shadow">
+                    <div class="comment__content">
+                        <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam blanditiis, debitis dolorum expedita, illum ipsum iste, maxime molestias necessitatibus nihil non officiis quidem quisquam reprehenderit saepe sed voluptate. Quam.</div>
+                        <span class="comment__name">-A. ARSLANTAŞ</span>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="comment">
+
+                <img src="imgs/person.jpg" alt="person" class="comment__img">
+                <div class="comment__content-shadow">
+                    <div class="comment__content">
+                        <div class="comment__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aperiam blanditiis, debitis dolorum expedita, illum ipsum iste, maxime molestias necessitatibus nihil non officiis quidem quisquam reprehenderit saepe sed voluptate. Quam.</div>
+                        <span class="comment__name">-A. ARSLANTAŞ</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+
     </section>
     <footer class="footer">footer</footer>
 </div>
