--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercansoft Web Site</title>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;800&family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" type="image/png" href="imgs/favicon.png">
 </head>
 <body>
 <div class="container">
@@ -122,7 +122,6 @@
                       <use xlink:href="imgs/sprite.svg#interview"></use>
                   </svg>
                   <p class="workflow__text u-text-align-right ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias architecto aspernatur, atque consectetur doloremque</p>
-
               </div>
               <div class="workflow__box"></div>
               <div class="workflow__box">
@@ -364,7 +363,132 @@
 
 
     </section>
-    <footer class="footer">footer</footer>
+    <footer class="footer">
+        <div class="footer__top">
+            <div class="footer__top-left">
+                <img src="imgs/logo-footer.png" alt="footer-logo" class="footer__logo">
+
+                <ul class="footer__company-info-list">
+                    <li class="footer__company-info-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="imgs/sprite.svg#pin"></use>
+                        </svg>
+                        <p>Fatih Mahallesi 800.sok No:69<br>Kadıköy/ İSTANBUL</p>
+                    </li>
+                    <li class="footer__company-info-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="imgs/sprite.svg#call"></use>
+                        </svg>
+                        <span>0216 444 22 11</span>
+                    </li>
+                    <li class="footer__company-info-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="imgs/sprite.svg#smartphone"></use>
+                        </svg>
+                        <span>0544 444 22 11</span>
+                    </li>
+                    <li class="footer__company-info-item">
+                        <svg class="footer__icon">
+                            <use xlink:href="imgs/sprite.svg#call"></use>
+                        </svg>
+                        <span>mercansoft@mercansoft.com</span>
+                    </li>
+                    <li class="footer__company-info-item">
+                        <img src="imgs/google.png" alt="google play"> <img src="imgs/apple.png" alt="apple">
+                    </li>
+
+                    
+
+                </ul>
+
+            </div>
+            <div class="footer__top-right">
+                <div class="footer__container">
+                    <h4 class="footer__header"> SoftWare <span class="footer__header-underline"></span></h4>
+                    <ul class="footer__list">
+                        <li class="footer__item"><a class="footer__link" href="">item-1</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-2</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-3</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-4</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__container">
+                    <h4 class="footer__header"> Product <span class="footer__header-underline"></span></h4>
+                    <ul class="footer__list">
+                        <li class="footer__item"><a class="footer__link" href="">item-1</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-2</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-3</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-4</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__container">
+                    <h4 class="footer__header"> Endustry <span class="footer__header-underline"></span></h4>
+                    <ul class="footer__list">
+                        <li class="footer__item"><a class="footer__link" href="">item-1</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-2</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-3</a></li>
+                        <li class="footer__item"><a class="footer__link" href="">item-4</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer__container">
+                    <h4 class="footer__header"> Bize Ulaşın <span class="footer__header-underline"></span></h4>
+                    <nav class="social-nav">
+                        <ul class="social-nav__list">
+                            <li class="social-nav__item">
+                                <a  class="social-nav__link" href="">
+                                    <svg class="social-nav__icon">
+                                        <use xlink:href="imgs/sprite.svg#twitter"></use>
+                                    </svg>
+                                </a>
+                            </li>
+
+                            <li class="social-nav__item">
+                                <a  class="social-nav__link" href="">
+                                    <svg class="social-nav__icon">
+                                        <use xlink:href="imgs/sprite.svg#facebook"></use>
+                                    </svg>
+                                </a>
+                            </li>
+
+                            <li class="social-nav__item">
+                                <a  class="social-nav__link" href="">
+                                    <svg class="social-nav__icon">
+                                        <use xlink:href="imgs/sprite.svg#instagram"></use>
+                                    </svg>
+                                </a>
+                            </li>
+
+                            <li class="social-nav__item">
+                                <a  class="social-nav__link" href="">
+                                    <svg class="social-nav__icon">
+                                        <use xlink:href="imgs/sprite.svg#linkedin"></use>
+                                    </svg>
+                                </a>
+                            </li>
+
+                            <li class="social-nav__item">
+                                <a  class="social-nav__link" href="">
+                                    <svg class="social-nav__icon">
+                                        <use xlink:href="imgs/sprite.svg#google-plus"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+
+
+
+        </div>
+        <div class="footer__bottom">
+
+        </div>
+
+    </footer>
 </div>
 
 </body>
