added form component

--- a/index.html
+++ b/index.html
@@ -11,10 +11,57 @@
 <body>
 <div class="container">
     <header class="header">
+        <div class="header__social-search">
+            <nav class="social-nav">
+                <ul class="social-nav__list">
+                    <li class="social-nav__item">
+                        <a  class="social-nav__link" href="">
+                            <svg class="social-nav__icon">
+                                <use xlink:href="imgs/sprite.svg#twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="social-nav__item">
+                        <a  class="social-nav__link" href="">
+                            <svg class="social-nav__icon">
+                                <use xlink:href="imgs/sprite.svg#facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="social-nav__item">
+                        <a  class="social-nav__link" href="">
+                            <svg class="social-nav__icon">
+                                <use xlink:href="imgs/sprite.svg#instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="social-nav__item">
+                        <a  class="social-nav__link" href="">
+                            <svg class="social-nav__icon">
+                                <use xlink:href="imgs/sprite.svg#linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
+
+                    <li class="social-nav__item">
+                        <a  class="social-nav__link" href="">
+                            <svg class="social-nav__icon">
+                                <use xlink:href="imgs/sprite.svg#google-plus"></use>
+                            </svg>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+
+        </div>
+
+
         <div class="header__logo">
             <img src="imgs/lg-3.png" alt="logo" class="header__logo-img">
         </div>
-
         <nav class="nav">
             <ul class="nav__list">
                 <li class="nav__item"><a href="" class="nav__link">home</a></li>
@@ -23,7 +70,7 @@
                 <li class="nav__item"><a href="" class="nav__link">software</a></li>
                 <li class="nav__item"><a href="" class="nav__link">endustry</a></li>
                 <li class="nav__item"><a href="" class="nav__link">about us</a></li>
-                <li class="nav__item"><a href="" class="nav__link">contact us</a></li>
+                <li class="nav__item"><a href="contactus.html" class="nav__link">contact us</a></li>
             </ul>
         </nav>
         <button class="btn"><span>LOGIN</span><span>LOGIN</span></button>
@@ -43,7 +90,7 @@
                 </button>
             </div>
             <div class="sec-info__right">
-                <img src="imgs/img-right.png" alt="bg" class="sec-info__img">
+                <img src="imgs/programming-2.png" alt="bg" class="sec-info__img">
             </div>
     </section>
     <section class="sec-features">
@@ -435,11 +482,11 @@
 
                 <div class="footer__container">
                     <h4 class="footer__header"> Bize Ulaşın <span class="footer__header-underline"></span></h4>
-                    <nav class="social-nav">
+                    <nav class="social-nav social-nav--big">
                         <ul class="social-nav__list">
                             <li class="social-nav__item">
-                                <a  class="social-nav__link" href="">
-                                    <svg class="social-nav__icon">
+                                <a  class="social-nav__link social-nav__link" href="">
+                                    <svg class="social-nav__icon social-nav__icon">
                                         <use xlink:href="imgs/sprite.svg#twitter"></use>
                                     </svg>
                                 </a>
@@ -490,6 +537,7 @@
 
     </footer>
 </div>
+
 
 </body>
 </html>
