added contact-info component in contact

--- a/contact.html
+++ b/contact.html
@@ -78,18 +78,53 @@
     </header>
     <main class="contactus">
 
-            <div class="contactus__left">
-                <form action="" class="form">
-                    <input type="text" class="form__input" placeholder="Adınız ve Soyadınız" required>
-                    <input type="email" class="form__input" placeholder="E-mail adresiniz" required>
-                    <input type="tel" class="form__input" placeholder="Telefon Numaranız" required>
-                    <textarea name="message" id="message" class="form__message"  placeholder="Mesajınız" cols="30" rows="7"></textarea>
-                    <button class="btn">Gönder</button>
-                </form>
+        <div class="contactus__left">
+            <form action="" class="form">
+                <input type="text" class="form__input" placeholder="Adınız ve Soyadınız" required>
+                <input type="email" class="form__input" placeholder="E-mail adresiniz" required>
+                <input type="tel" class="form__input" placeholder="Telefon Numaranız" required>
+                <textarea name="message" id="message" class="form__input form__message"  placeholder="Mesajınız" cols="30" rows="7"></textarea>
+                <button class="btn btn--middle"><span>gönder</span><span>gönder</span></button>
+            </form>
+        </div>
+        <div class="contactus__right">
+            <div class="comp-contact-info">
+                <img src="imgs/logo-footer.png" alt="footer-logo" class="comp-contact-info__logo">
+
+                <ul class="comp-contact-info__list">
+                    <li class="comp-contact-info__item">
+                        <svg class="comp-contact-info__icon">
+                            <use xlink:href="imgs/sprite.svg#pin"></use>
+                        </svg>
+                        <p>Fatih Mahallesi 800.sok No:69<br>Kadıköy/ İSTANBUL</p>
+                    </li>
+                    <li class="comp-contact-info__item">
+                        <svg class="comp-contact-info__icon">
+                            <use xlink:href="imgs/sprite.svg#call"></use>
+                        </svg>
+                        <span>0216 444 22 11</span>
+                    </li>
+                    <li class="comp-contact-info__item">
+                        <svg class="comp-contact-info__icon">
+                            <use xlink:href="imgs/sprite.svg#smartphone"></use>
+                        </svg>
+                        <span>0544 444 22 11</span>
+                    </li>
+                    <li class="comp-contact-info__item">
+                        <svg class="comp-contact-info__icon">
+                            <use xlink:href="imgs/sprite.svg#call"></use>
+                        </svg>
+                        <span>mercansoft@mercansoft.com</span>
+                    </li>
+                    <li class="comp-contact-info__item">
+                        <img src="imgs/google.png" alt="google play"> <img src="imgs/apple.png" alt="apple">
+                    </li>
+
+
+
+                </ul>
             </div>
-            <div class="contactus__right">
-                <img src="imgs/contactus.png" alt="contact-us">
-            </div>
+        </div>
 
     </main>
 
